--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "sanitize-html": "^2.3.1",
-    "session-file-store": "^1.5.0"
+    "session-file-store": "^1.5.0",
+    "shortid": "^2.2.16"
   }
 }
