--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "helmet": "^4.4.1",
     "lowdb": "^1.0.0",
     "passport": "^0.4.1",
+    "passport-facebook": "^3.0.0",
     "passport-google-oauth": "^2.0.0",
     "passport-local": "^1.0.0",
     "sanitize-html": "^2.3.1",
